fix for refactoring DocumentUploadClientApi with CaseDocumentClient. DocumentManagementUploader is updated but this class is not used or ex tended by any other class