@@ -2,15 +2,16 @@ package uk.gov.hmcts.reform.iacasedocumentsapi.infrastructure.clients;
 
 import com.google.common.io.ByteStreams;
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
-import uk.gov.hmcts.reform.document.DocumentUploadClientApi;
-import uk.gov.hmcts.reform.document.domain.UploadResponse;
-import uk.gov.hmcts.reform.document.utils.InMemoryMultipartFile;
+import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
+import uk.gov.hmcts.reform.ccd.document.am.model.Classification;
+import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
+import uk.gov.hmcts.reform.ccd.document.am.util.InMemoryMultipartFile;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.UserDetailsProvider;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.UserDetails;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.ccd.field.Document;
@@ -19,16 +20,16 @@ import uk.gov.hmcts.reform.iacasedocumentsapi.domain.service.DocumentUploader;
 @Service
 public class DocumentManagementUploader implements DocumentUploader {
 
-    private final DocumentUploadClientApi documentUploadClientApi;
+    private final CaseDocumentClient caseDocumentClient;
     private final AuthTokenGenerator serviceAuthorizationTokenGenerator;
     private final UserDetailsProvider userDetailsProvider;
 
     public DocumentManagementUploader(
-        DocumentUploadClientApi documentUploadClientApi,
+            CaseDocumentClient caseDocumentClient,
         AuthTokenGenerator serviceAuthorizationTokenGenerator,
         @Qualifier("requestUser") UserDetailsProvider userDetailsProvider
     ) {
-        this.documentUploadClientApi = documentUploadClientApi;
+        this.caseDocumentClient = caseDocumentClient;
         this.serviceAuthorizationTokenGenerator = serviceAuthorizationTokenGenerator;
         this.userDetailsProvider = userDetailsProvider;
     }
@@ -40,7 +41,7 @@ public class DocumentManagementUploader implements DocumentUploader {
         final String serviceAuthorizationToken = serviceAuthorizationTokenGenerator.generate();
         final UserDetails userDetails = userDetailsProvider.getUserDetails();
         final String accessToken = userDetails.getAccessToken();
-        final String userId = userDetails.getId();
+
 
         try {
 
@@ -52,19 +53,20 @@ public class DocumentManagementUploader implements DocumentUploader {
             );
 
             UploadResponse uploadResponse =
-                documentUploadClientApi
-                    .upload(
-                        accessToken,
-                        serviceAuthorizationToken,
-                        userId,
-                        Collections.singletonList(file)
-                    );
+                    caseDocumentClient
+                            .uploadDocuments(
+                              accessToken,
+                              serviceAuthorizationToken,
+                              "Asylum",
+                              "IA",
+                              List.of(file),
+                              Classification.PUBLIC
+                            );
 
-            uk.gov.hmcts.reform.document.domain.Document uploadedDocument =
-                uploadResponse
-                    .getEmbedded()
-                    .getDocuments()
-                    .get(0);
+            uk.gov.hmcts.reform.ccd.document.am.model.Document uploadedDocument =
+                    uploadResponse
+                            .getDocuments()
+                            .get(0);
 
             return new Document(
                 uploadedDocument
